Add D3 version of UN

--- a/src/main/html/cytoscape/taxonomy.html
+++ b/src/main/html/cytoscape/taxonomy.html
@@ -8,7 +8,7 @@
 			}
 		</style>
 		<script src="cytoscape.umd.js"></script>
-		<script src="elements.js"></script>
+		<script src="taxonomy.js"></script>
 		<script>
 			function startCytoscape() {
 				var cy = cytoscape({
