--- a/src/main/html/d3/d3.html
+++ b/src/main/html/d3/d3.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="d3.js" charset="utf-8"></script>
-		<script src="elements.json" charset="utf-8"></script>
+		<script src="d3.json" charset="utf-8"></script>
 		<script>
 			function doit() {
 				var width = 460;
