Refactor graph completely and update all converters

--- a/src/main/html/d3/taxonomy.html
+++ b/src/main/html/d3/taxonomy.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="d3.js" charset="utf-8"></script>
-		<script src="taxonomy.json" charset="utf-8"></script>
+		<script src="taxonomy_acquisition_data_d3.js" charset="utf-8"></script>
 		<script>
 			function doit() {
 				function chart() {
