--- a/src/main/html/cytoscape/taxonomy.html
+++ b/src/main/html/cytoscape/taxonomy.html
@@ -8,7 +8,7 @@
 			}
 		</style>
 		<script src="cytoscape.umd.js"></script>
-		<script src="taxonomy.js"></script>
+		<script src="taxonomy_acquisition_data_cy.js"></script>
 		<script>
 			function startCytoscape() {
 				var cy = cytoscape({
