--- a/src/main/html/d3/un.html
+++ b/src/main/html/d3/un.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="d3.js" charset="utf-8"></script>
-		<script src="un.json" charset="utf-8"></script>
+		<script src="un_ontology_d3.js" charset="utf-8"></script>
 		<script>
 			function doit() {
 				function chart() {
